Header section created
nav link and quick links added in header

--- a/src/app/Components/Footer/footer/footer.component.html
+++ b/src/app/Components/Footer/footer/footer.component.html
@@ -1,1 +1,34 @@
-<p>footer works!</p>
+<div class="footer-main">
+    <div class="quick-links">
+        <div class="link-head">
+            <p>Quick Links</p>
+        </div>
+        <div class="q-links">
+            <p><a href="#">About us</a></p>
+            <p><a href="#">Advertise</a></p>
+            <p><a href="#">Media</a></p>
+            <p><a href="#">Customer Care</a></p>
+            <p><a href="#">Feedback</a></p>
+        </div>
+    </div>
+    <div class="verticals">
+        <div class="vertical-head">
+            <p>Verticals Links</p>
+        </div>
+        <div class="v-link">
+            <p><a href="#">B2B</a></p>
+            <p><a href="#">All India</a></p>
+            <p><a href="#">Restaurants</a></p>
+            <p><a href="#">Doctors</a></p>
+            <p><a href="#">Hospitals</a></p>
+            <p><a href="#">Car Services</a></p>
+            <p><a href="#">AC Repair</a></p>
+            <p><a href="#">Real Estate</a></p>
+            <p><a href="#">Bills & Recharge</a></p>
+            
+        </div>
+    </div>
+</div>
+<div class="copyright">
+    Copyrights 2022-23.  All Rights Reserved
+</div>
