Added new nav bar

--- a/src/app/Components/Header/nav-header/nav-header.component.html
+++ b/src/app/Components/Header/nav-header/nav-header.component.html
@@ -1,1 +1,15 @@
-<p>nav-header works!</p>
+<header class="nav-header">
+    <div class="logo-text">Maratha</div>
+    <div class="search-bar">
+      <input type="text" placeholder="Search...">
+      <button>Search</button>
+    </div>
+
+    <nav class="navigation-links">
+      <a href="#">Home</a>
+      <a href="#">Categories</a>
+      <a href="#">Cities</a>
+      <button class="login-signup-btn">Login/Sign Up</button>
+      <!-- Add more links as needed -->
+    </nav>
+  </header>
