Created Mobile view

--- a/src/app/Components/Header/nav-header/nav-header.component.html
+++ b/src/app/Components/Header/nav-header/nav-header.component.html
@@ -1,15 +1,47 @@
-<header class="nav-header">
-    <div class="logo-text">Maratha</div>
-    <div class="search-bar">
-      <input type="text" placeholder="Search...">
-      <button>Search</button>
+<nav class="navbar">
+    <div class="brand">
+        <a href="#">AskMe</a>
     </div>
+    <div class="nav-links">
+        <a href="#">Home</a>
+        <a href="#">Cities</a>
+        <a href="#">Categories</a>
+        <button class="login-signup-btn">Login/Sign Up</button>
+    </div>
+    <div class="mobile-nav">
+        <div class="mobile-logo">
+            <span style="margin-right: 15px; font-size: 15px;">
+                <a href="#"><i class="fa-regular fa-bell fa-2x fa-fw custom-icon"></i></a>
+            </span>
+            <a href="#"><i class="fa-solid fa-circle-user fa-2x fa-fw custom-icon"></i></a>
+        </div>
 
-    <nav class="navigation-links">
-      <a href="#">Home</a>
-      <a href="#">Categories</a>
-      <a href="#">Cities</a>
-      <button class="login-signup-btn">Login/Sign Up</button>
-      <!-- Add more links as needed -->
-    </nav>
-  </header>
+        <div class="mobile-nav-logo">
+
+
+        </div>
+    </div>
+</nav>
+<div class="mobile-nav-logo">
+    <ul>
+        <li>
+            <a href="#"><i class="fa-solid fa-house custom-icon"></i></a>
+            <div>Home</div>
+        </li>
+        <li>
+            <a href="#"><i class="fa-solid fa-b custom-icon"></i></a>
+            <div>B2B</div>
+        </li>
+        <li>
+            <div style="color:#ec6a2f; font-size: 20px; font-weight: bold;">AskMe</div>
+        </li>
+        <li>
+            <a href="#"><i class="fas fa-newspaper custom-icon"></i></a>
+            <div>News</div>
+        </li>
+        <li>
+            <a href="#"><i class="fa-solid fa-bars custom-icon"></i></a>
+            <div>More</div>
+        </li>
+    </ul>
+</div>
