--- a/src/app/Components/Header/nav-header/nav-header.component.css
+++ b/src/app/Components/Header/nav-header/nav-header.component.css
@@ -1,61 +1,121 @@
-.nav-header {
+/* Style for the desktop navbar */
+.navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 18px 20px;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .logo img {
-    width: 100px;
-  }
-  
-  .search-bar {
-    display: flex;
-    align-items: center;
-  }
-  
-  .search-bar input[type="text"] {
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .search-bar button {
-    background-color: #f90;
-    color: #fff;
-    padding: 8px 12px;
-    border: none;
-    border-radius: 4px;
-    margin-left: 10px;
-    cursor: pointer;
-  }
-  
-  .navigation-links a {
+
+}
+
+.brand a {
+    font-size: 24px;
+    text-decoration: none;
+    color: #ec6a2f;
+    font-weight: bold;
+}
+
+.nav-links a {
     text-decoration: none;
     color: #333;
     margin-right: 15px;
     transition: color 0.3s;
     font-size: 1rem;
     font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .navigation-links a:hover {
-    color: #f90;
-  }
-  
-  .login-signup-btn {
-    background-color: #0076d7;;
-    color: white; /* Text color */
+}
+
+.nav-links a:hover {
+    color: #ec6a2f;
+}
+
+.custom-icon{
+    color: grey;
+}
+.mobile-menu-nav{
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 18px 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.login-signup-btn {
+    background-color: #0076d7;
+    color: white;
     border: none;
     padding: 8px 16px;
+    font-weight: bold;
     border-radius: 4px;
     cursor: pointer;
-  }
-  
-  .logo-text{
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #f90;
-  }
+}
+
+/* Style for the mobile navbar */
+.mobile-nav {
+    display: none;
+}
+
+.mobile-logo {
+    display: none;
+}
+
+/* Media query for mobile devices */
+@media screen and (max-width: 768px) {
+    .nav-links {
+        display: none;
+    }
+
+    .mobile-nav {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .mobile-logo {
+        display: block;
+        text-align: center;
+        font-size: 16px;
+    }
+    .navbar{
+        padding: 16px 16px; 
+    }
+    
+
+    .mobile-nav-logo ul {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
+    
+    .mobile-nav-logo li {
+        display: inline-table;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .mobile-nav-logo a {
+        text-decoration: none;
+    }
+    
+    .mobile-nav-logo i {
+        display: block;
+        margin-bottom: 5px; /* Adjust as needed */
+    }
+    
+    .mobile-nav-logo div {
+        font-size: 14px; /* Adjust as needed */
+    }
+
+    .mobile-nav-logo{
+        width: 100%;
+        position: fixed;
+        background-color: #fff;
+        box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+        padding: 16px 0px;
+        justify-content: space-around;
+        bottom: 0;
+    }
+}
+
