--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,34 +1,17 @@
-/* ================ Hero Section ============== */
-.hero-div {
-    overflow: hidden;
-}
 
 /* ================ Header section ================ */
 .header {
-    height: 10vh;
-    width: 100%;
-    background-color: white;
-    position: fixed;
+     min-height: 10vh; 
+     width: 100%; 
+     position: -webkit-sticky;
+    position: sticky;
     top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
-}
-
-/* ================ main Section ============== */
-.main-div {
-    overflow: auto;
-    
 }
 
 /* ================ body-parent-module ============== */
 .body-parent-module {
-    min-height: 90vh;
+    min-height:60vh;
     width: 100%;
-    /* border: 2px solid rgb(176, 229, 19); */
-    position: relative;
-    top: 10vh;
-    overflow: auto;
     width: 95%;
     margin: auto;
 }
@@ -37,9 +20,6 @@
 .footer {
     min-height: 25vh;
     width: 100%;
-    margin: auto;
-    position: relative;
-    top: 15vh;
     width: 95%;
     margin: auto;
 }
