--- a/src/app/Components/Header/nav-header/nav-header.component.css
+++ b/src/app/Components/Header/nav-header/nav-header.component.css
@@ -60,6 +60,9 @@
 .mobile-logo {
     display: none;
 }
+.mobile-nav-logo{
+    display: none;
+}
 
 /* Media query for mobile devices */
 @media screen and (max-width: 768px) {
@@ -80,7 +83,9 @@
     .navbar{
         padding: 16px 16px; 
     }
-    
+    .mobile-nav-logo{
+        display: block;
+    }
 
     .mobile-nav-logo ul {
       display: flex;
