--- a/src/app/Components/Body/category/category-list/category-list.component.html
+++ b/src/app/Components/Body/category/category-list/category-list.component.html
@@ -2,68 +2,47 @@
     <div class="cat-row">
         
         <div class="item">
-            <div class="icon"></div>
+            <div class="icon"><i class="fa-solid fa-hotel"></i></div>
             <a href="#">Restaurants</a>
         </div>
         <div class="item">
-            <div class="icon"></div>
+            <div class="icon"><i class="fa-light fa-hotel"></i></div>
             <a href="#">Hotels</a>
         </div>
         <div class="item">
-            <div class="icon"></div>
+            <div class="icon"><i class="fas fa-female"></i></div>
             <a href="#">Beauty Spa</a>
         </div>
         <div class="item">
-            <div class="icon"></div>
+            <div class="icon"><i class="fas fa-home"></i></div>
             <a href="#">Home Decor</a>
         </div>
         <div class="item">
-            <div class="icon"></div>
+            <div class="icon"><i class="fa-solid fa-book-open"></i></div>
             <a href="#">Education</a>
         </div>
         <div class="item">
-            <div class="icon"></div>
+            <div class="icon"><i class="fab fa-hire-a-helper"></i></div>
             <a href="#">Rent & Hire</a>
         </div>
         <div class="item">
-            <div class="icon"></div>
+            <div class="icon"><i class="fas fa-hospital"></i></div>
             <a href="#">Hospitals</a>
         </div>
         <div class="item">
-            <div class="icon"></div>
+            <div class="icon"><i class="fa-solid fa-person-digging"></i></div>
             <a href="#">Contractors</a>
         </div>
-        
         <div class="item">
-            <div class="icon"></div>
-            <a href="#">Pet Shops</a>
-        </div>
-        <div class="item">
-            <div class="icon"></div>
-            <a href="#">PG/Hostels</a>
-        </div>
-        <div class="item">
-            <div class="icon"></div>
-            <a href="#">Estate Agent</a>
-        </div>
-        <div class="item">
-            <div class="icon"></div>
-            <a href="#">Dentists</a>
-        </div>
-        <div class="item">
-            <div class="icon"></div>
+            <div class="icon"><i class="fa-solid fa-network-wired"></i></div>
             <a href="#">Consultants</a>
         </div>
         <div class="item">
-            <div class="icon"></div>
+            <div class="icon"><i class="fa-solid fa-person-skating"></i></div>
             <a href="#">GYM</a>
         </div>
         <div class="item">
-            <div class="icon"></div>
-            <a href="#">Event Organisers</a>
-        </div>
-        <div class="item">
-            <div class="icon"></div>
+            <div class="icon"><i class="fa-solid fa-car"></i></div>
             <a href="#">Driving Schools</a>
         </div>
         
