--- a/src/app/Components/Body/body-parent-module/body-parent-module.component.html
+++ b/src/app/Components/Body/body-parent-module/body-parent-module.component.html
@@ -1,2 +1,11 @@
+<div class="search-bar">
+    <input type="text" class="search-input" [placeholder]="'Search for ' + currentName" />
+    <button class="search-button">
+      <i class="fas fa-search"></i>
+    </button>
+    <button class="mic-button">
+      <i class="fas fa-microphone"></i>
+    </button>
+  </div>
 <app-advertisement></app-advertisement>
 <app-category-list></app-category-list>
