Added See All button

--- a/src/app/Components/Body/advertisement/advertisement/advertisement.component.html
+++ b/src/app/Components/Body/advertisement/advertisement/advertisement.component.html
@@ -1,11 +1,10 @@
 <div class="advertisement">
     <div class="advertisement-left">
-
+        <img src="/src/assets/askme3.png" width="100%" height="100%" alt="Advertisement Image">
     </div>
     <div class="search-box">
-        
+
     </div>
     <div class="advertisement-right">
-
     </div>
 </div>
