--- a/src/app/Components/Body/category/category-list/category-list.component.html
+++ b/src/app/Components/Body/category/category-list/category-list.component.html
@@ -1,51 +1,19 @@
-<div class="category">
-    <div class="cat-row">
-        
-        <div class="item">
-            <div class="icon"><i class="fa-solid fa-hotel"></i></div>
-            <a href="#">Restaurants</a>
+<div class="card-container">
+    <div class="card" *ngFor="let category of categories">
+      <div style="display: flex; justify-content: space-between; align-items: center;">
+        <span class="card-label">{{ category.label }}</span>
+        <div style="display: flex; align-items: center;">
+          <span style="color: blue; font-family: Verdana, Geneva, Tahoma, sans-serif;" (click)="toggleItemsVisibility(category)">
+            {{ category.showAll ? 'Hide All' : 'See All' }} <i class="fa-solid fa-chevron-right"></i>
+          </span>
         </div>
-        <div class="item">
-            <div class="icon"><i class="fa-light fa-hotel"></i></div>
-            <a href="#">Hotels</a>
-        </div>
-        <div class="item">
-            <div class="icon"><i class="fas fa-female"></i></div>
-            <a href="#">Beauty Spa</a>
-        </div>
-        <div class="item">
-            <div class="icon"><i class="fas fa-home"></i></div>
-            <a href="#">Home Decor</a>
-        </div>
-        <div class="item">
-            <div class="icon"><i class="fa-solid fa-book-open"></i></div>
-            <a href="#">Education</a>
-        </div>
-        <div class="item">
-            <div class="icon"><i class="fab fa-hire-a-helper"></i></div>
-            <a href="#">Rent & Hire</a>
-        </div>
-        <div class="item">
-            <div class="icon"><i class="fas fa-hospital"></i></div>
-            <a href="#">Hospitals</a>
-        </div>
-        <div class="item">
-            <div class="icon"><i class="fa-solid fa-person-digging"></i></div>
-            <a href="#">Contractors</a>
-        </div>
-        <div class="item">
-            <div class="icon"><i class="fa-solid fa-network-wired"></i></div>
-            <a href="#">Consultants</a>
-        </div>
-        <div class="item">
-            <div class="icon"><i class="fa-solid fa-person-skating"></i></div>
-            <a href="#">GYM</a>
-        </div>
-        <div class="item">
-            <div class="icon"><i class="fa-solid fa-car"></i></div>
-            <a href="#">Driving Schools</a>
-        </div>
-        
+      </div>
+      <ul class="category-items">
+        <li *ngFor="let item of category.items | slice: 0 : (category.showAll ? category.items.length : 4)">
+          <a href="#"><i class="{{ item.icon }} custom-icon"></i></a>
+          <div>{{ item.name }}</div>
+        </li>
+      </ul>
     </div>
-    
-</div>
+  </div>
+  
