doctors route created

--- a/src/app/Components/Body/body-parent-module/body-parent-module.component.html
+++ b/src/app/Components/Body/body-parent-module/body-parent-module.component.html
@@ -9,3 +9,7 @@
   </div>
 <app-advertisement></app-advertisement>
 <app-category-list></app-category-list>
+<!-- <div *ngIf="router.isActive('/AllDoctors')">
+  <router-outlet></router-outlet>
+  this.router.navigate(['/dashboard']);
+</div> -->
