--- a/src/app/Components/Body/category/category-list/category-list.component.html
+++ b/src/app/Components/Body/category/category-list/category-list.component.html
@@ -3,9 +3,12 @@
       <div style="display: flex; justify-content: space-between; align-items: center;">
         <span class="card-label">{{ category.label }}</span>
         <div style="display: flex; align-items: center;">
-          <span style="color: blue; font-family: Verdana, Geneva, Tahoma, sans-serif;" (click)="toggleItemsVisibility(category)">
-            {{ category.showAll ? 'Hide All' : 'See All' }} <i class="fa-solid fa-chevron-right"></i>
-          </span>
+          <!-- <a [routerLink]="['/AllDoctors']" style="color: blue; font-family: Verdana, Geneva, Tahoma, sans-serif;">
+            <span (click)="toggleItemsVisibility(category)">
+              {{ category.showAll ? 'Hide All' : 'See All' }} <i class="fa-solid fa-chevron-right"></i>
+            </span>
+          </a> -->
+          <a href="AllDoctors">See all</a>
         </div>
       </div>
       <ul class="category-items">
