--- a/src/app/Components/Body/body-parent-module/body-parent-module.component.html
+++ b/src/app/Components/Body/body-parent-module/body-parent-module.component.html
@@ -1,4 +1,9 @@
-<div class="search-bar">
+
+<div *ngIf="isAllDoctorsActive; else elseContent">
+ <router-outlet></router-outlet>
+</div>
+<ng-template #elseContent>
+  <div class="search-bar">
     <input type="text" class="search-input" [placeholder]="'Search for ' + currentName" />
     <button class="search-button">
       <i class="fas fa-search"></i>
@@ -9,7 +14,4 @@
   </div>
 <app-advertisement></app-advertisement>
 <app-category-list></app-category-list>
-<!-- <div *ngIf="router.isActive('/AllDoctors')">
-  <router-outlet></router-outlet>
-  this.router.navigate(['/dashboard']);
-</div> -->
+</ng-template>
