Doctor heading added in navbar

--- a/src/app/Components/Body/category/category-list/category-list.component.html
+++ b/src/app/Components/Body/category/category-list/category-list.component.html
@@ -8,7 +8,7 @@
               {{ category.showAll ? 'Hide All' : 'See All' }} <i class="fa-solid fa-chevron-right"></i>
             </span>
           </a> -->
-          <a href="AllDoctors">See all</a>
+          <a routerLink="AllDoctors">See all</a>
         </div>
       </div>
       <ul class="category-items">
