--- a/src/app/Components/Header/nav-header/nav-header.component.css
+++ b/src/app/Components/Header/nav-header/nav-header.component.css
@@ -63,7 +63,35 @@
 .mobile-nav-logo{
     display: none;
 }
+/* =============Doctor brand  ============ */
+.d-brand{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90vw;
+    margin: auto;
 
+
+}
+.d-brand a{
+    width: 10vw;
+    height: 100%;
+    color: #ec6a2f;
+    position: absolute;
+    align-items: center;
+    left: 0px;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+}
+.d-brand p{
+    width: 100vw;
+    height: 100%;
+    text-align: center;
+    font-weight: 900;
+    font-size: 1.2rem;
+    color: #ec6a2f;
+}
 /* Media query for mobile devices */
 @media screen and (max-width: 768px) {
     .nav-links {
