images added in advertisement

--- a/src/app/Components/Body/advertisement/advertisement/advertisement.component.html
+++ b/src/app/Components/Body/advertisement/advertisement/advertisement.component.html
@@ -1,6 +1,7 @@
 <div class="advertisement">
-    <div class="advertisement-left">
-        <img src="/src/assets/askme3.png" width="100%" height="100%" alt="Advertisement Image">
+    <div class="advertisement-left" >
+        
+        <img src=".../../../../../../../assets/hero-scroll.jpg" width="100%" height="100%" alt="Advertisement Image">
     </div>
     <div class="search-box">
 
