--- a/src/app/Components/Body/category/category-list/category-list.component.css
+++ b/src/app/Components/Body/category/category-list/category-list.component.css
@@ -34,6 +34,7 @@ ul {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+  text-align: center;
   /* justify-content: space-between; */
 }
 
@@ -44,7 +45,9 @@ ul {
   flex-direction: column;
   align-items: center;
 }
-
+.category-items  a{
+  text-decoration: none;
+}
 .category-items li.new-line {
   width: 100%; /* Full width for the item on a new line */
 }
