--- a/src/app/Components/Body/Doctors/category/category-list/category-list.component.html
+++ b/src/app/Components/Body/Doctors/category/category-list/category-list.component.html
@@ -35,14 +35,14 @@
       <span class="card-label">{{ category.label }}</span>
       <div style="display: flex; align-items: center;">
         <!-- Link to 'AllDoctors' page -->
-        <a style="color: blue; font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: bold; text-decoration: none;"
-           [routerLink]="['/AllDoctors']">See all <i class="fa-solid fa-chevron-right"></i></a>
+        <a style="color: #EC6a2f; font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: bold; text-decoration: none;" [routerLink]="['/AllDoctors']">See all <i class="fa-solid fa-chevron-right"></i></a>
       </div>
     </div>
     <ul class="category-items">
       <!-- Item links with dynamic routing -->
       <li *ngFor="let item of category.items | slice: 0 : (category.showAll ? category.items.length : 4)">
-        <a [routerLink]="['/AllDoctors', item.id]">
+        <!-- <a [routerLink]="['/AllDoctors', item.id]"> -->
+          <a [routerLink]="['/desc']">
           <i class="{{ item.icon }} custom-icon"></i>
           <div>{{ item.name }}</div>
         </a>
