--- a/src/app/Components/Body/Doctors/category/category-list/category-list.component.html
+++ b/src/app/Components/Body/Doctors/category/category-list/category-list.component.html
@@ -41,8 +41,7 @@
     <ul class="category-items">
       <!-- Item links with dynamic routing -->
       <li *ngFor="let item of category.items | slice: 0 : (category.showAll ? category.items.length : 4)">
-        <!-- <a [routerLink]="['/AllDoctors', item.id]"> -->
-          <a [routerLink]="['/desc']">
+        <a [routerLink]="['/AllDoctors', item.id]">
           <i class="{{ item.icon }} custom-icon"></i>
           <div>{{ item.name }}</div>
         </a>
