--- a/src/app/Components/Body/body-parent-module/body-parent-module.component.html
+++ b/src/app/Components/Body/body-parent-module/body-parent-module.component.html
@@ -1,8 +1,5 @@
-<div *ngIf="isAllDoctorsActive; else elseContent">
- <router-outlet></router-outlet>
-</div>
-<ng-template #elseContent>
-  <div class="search-bar">
+<div>
+  <div class="search-bar" >
     <input type="text" class="search-input" [placeholder]="'Search for ' + currentName" />
     <button class="search-button">
       <i class="fas fa-search"></i>
@@ -13,4 +10,4 @@
   </div>
 <app-advertisement></app-advertisement>
 <app-category-list></app-category-list>
-</ng-template>
+</div>
