--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 
   <div class="main-div">
     <div class="body-parent-module">
-      <app-body-parent-module></app-body-parent-module>
+      <router-outlet></router-outlet>
     </div>
 
     <div class="footer">
