--- a/src/app/Components/Body/Doctors/doctor-description/doctor-description.component.css
+++ b/src/app/Components/Body/Doctors/doctor-description/doctor-description.component.css
@@ -11,7 +11,8 @@
     background-size: contain;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     padding-bottom: 10px;
-    position: relative;
+    /* position: relative;
+    z-index: 0; */
     
 }
 .doctor-item:not(:first-child){
@@ -38,6 +39,6 @@ img{
     font-weight: 400;
 }
 .hsp-name{
-    position: absolute;
-    top: 10px;
+    /* position: absolute;
+    top: 10px; */
 }
